--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     guessNumber /= 2;
     guessNumber -= origNumber;
 
-   alert("Your final number is = " + guessNumber );
+   alert("Your final number is " + guessNumber );
 
      </script>
 </head>
