--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          <li>Subtract the number you first picked.</li>
     </ul>
 
-        <h1>Thanks for using the Number Trick application</h1>
+        <h1>Thanks for using the Number Trick application!</h1>
 
         <div> <id="img-div"> <id="image"> <img src="math.png" alt="MATH!!" class="center">
         </id="img-div">
