--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
          <li>Subtract the number you first picked.</li>
     </ul>
 
+        <h3>Your final number is 7!</h3>
+        
         <h1>Thanks for using the Number Trick application!</h1>
 
         <div> <id="img-div"> <id="image"> <img src="math.png" alt="MATH!!" class="center">
